[package]
name = "word-counter"
version = "0.1.0"
authors = ["Alyx Mote <figments@outlook.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "word_counter"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.4.0"

[dependencies]
neon = "0.4.0"

# Library specific crates
neon-serde = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
voca_rs = "1.10.1"